--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,15 +76,15 @@ input[type=submit]:hover {
     padding: 1rem;
 }
 
-#result {
-    font-size: 1.5rem;
+#score-area {
+    font-size: 1.3rem;
     border: #204969 1px dotted;
     border-radius: 4px;
     margin: 0 25%;
     padding: 1rem;
 }
 
-#result p {
+#score-area p {
     margin: 0;
     color: none;
 }
