--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,3 +104,21 @@ ul {
 li {
     margin-bottom: 2px;
 }
+
+/*Feedback page */
+
+#end-message {
+    margin-top: 1.5rem;
+    font-weight: 800;
+    font-size: 1.5em;
+}
+
+#exit {
+    background-color: #fff7f7;
+    border-color: #204969;
+    color: #204969;
+}
+
+#exit:hover {
+    background-color: #2049692a;
+}
