--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    padding-bottom: 200px ;
 }
 
 h1,
@@ -44,7 +45,7 @@ i:hover {
 
 #welcome {
     padding: 1.5rem 1rem;
-    margin: 8.7em 10em;
+    margin: 5em 30em;
 }
 
 #welcome div {
@@ -88,7 +89,7 @@ input[type=submit]:hover,
 
 #quizz-content-area {
     padding: 1rem;
-    margin: 6.5rem 10rem;
+    margin: 5rem 10rem;
 }
 
 #score-area {
@@ -149,6 +150,10 @@ a {
 
 @media screen and (max-width: 1200px) {
 
+    body {
+        padding-bottom: 430px ;
+    }
+
     #welcome {
         margin: 9em 10em;
     }
@@ -161,14 +166,17 @@ a {
 
 
 @media screen and (max-width: 920px) {
+    body {
+        padding-bottom: 460px ;
+    }
 
     #welcome {
-        margin: 10em 10em;
+        margin: 15em 10em;
     }
 
     #quizz-content-area {
 
-        margin: 8rem 10rem;
+        margin: 10rem 5rem;
     }
 
     h1 {
@@ -195,7 +203,7 @@ a {
     }
 
     #quizz-content-area {
-        margin: 7.5rem 8rem;
+        margin: 10rem 3rem;
     }
 
     a {
@@ -207,16 +215,21 @@ a {
 
 @media screen and (max-width: 545px) {
 
+    body {
+        padding-bottom: 190px ;
+    }
+
+    #welcome {
+        margin: 5em 2em;
+    }
+
     h1 {
         font-size: 2rem;
     }
 
-    #welcome {
-        margin: 11rem 3rem;
-    }
-
     #quizz-content-area {
-        margin: 7.5rem 3rem;
+        padding: 1rem;
+        margin: 7rem 2rem;
     }
 
     #end-message {
@@ -230,10 +243,18 @@ a {
 
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 370px) {
+
+    body {
+        padding-bottom: 90px;
+    }
+    #description {
+        width: 120px;
+        padding: 1px;
+    }
 
     #welcome {
-        margin: 7rem 0.5rem;
+        margin: 4rem 0.5rem;
     }
 
     #quizz-content-area {
@@ -241,16 +262,20 @@ a {
     }
 
     #score-area {
-        font-size: 1rem;
-        padding: 0.3rem;
+        font-size: 0.8rem;
+        padding: 0.2rem;
     }
 
     #quizz-area {
-        font-size: 0.9em;
+        font-size: 0.7em;
     }
 
     ul {
         text-align: left;
     }
+
+    input[type=submit], .btn {
+    padding: 0.5rem 1rem;
+}
 
 }
