--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,6 +58,7 @@ input[type=text] {
     background-color: transparent;
     border-radius: 4px;
     letter-spacing: 1px;
+    margin-top: 9px;
 }
 
 input[type=text]:hover {
@@ -192,7 +193,7 @@ a {
 @media screen and (max-width: 760px) {
     #welcome {
         padding: 2em;
-        margin: 11rem 10rem;
+        margin: 11rem 5rem;
     }
 
     h1 {
@@ -247,7 +248,7 @@ a {
 @media screen and (max-width: 370px) {
 
     body {
-        padding-bottom: 90px;
+        padding-bottom: 100px;
     }
     #description {
         width: 120px;
@@ -255,7 +256,8 @@ a {
     }
 
     #welcome {
-        margin: 4rem 0.5rem;
+        margin: 4.5rem 0.5rem;
+        padding: 3em 2em;
     }
 
     #quizz-content-area {
