Add css to images in end-message

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,12 @@ li {
     font-size: 1.5em;
 }
 
+img {
+    width: 50%;
+    border: 2px solid #204969;
+    border-radius: 50%;
+}
+
 a {
     text-decoration: none;
     font-size: 1rem;
