--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,7 +78,7 @@ input[type=submit],
 }
 
 input[type=submit]:hover,
-.btn:hover {
+.btn:hover, button:hover {
     border: #204969 1px solid;
     background-color: #fff7f7;
     color: #204969;
@@ -121,6 +121,17 @@ ul {
 
 li {
     margin-bottom: 6px;
+}
+
+button {
+    background-color: transparent;
+    color: #204969;
+    margin-top: 1.5rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 4px;
+    letter-spacing: 2px;
+    box-shadow: 1.5px 1.5px #2049696a;
+    font-weight: 700;
 }
 
 /* End message*/
